[metadata]
name = usine
version = 0.2.3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrates/usine

[options]
packages = find:
include_package_data = True
py_modules = usine
install_requires =
    paramiko==2.7.1
    progressist==0.1.0
    PyYAML==3.13

[options.extras_require]
test =
    pytest==5.3.2
