[metadata]
name = usine
version = 0.2.3
description = Minimalist remote tasks execution via SSH.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrates/usine
keywords = ssh deployment
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
packages = find:
include_package_data = True
py_modules = usine
install_requires =
    paramiko==2.7.1
    progressist==0.1.0
    PyYAML==5.2

[options.extras_require]
test =
    pytest==5.3.2
